# fusogen-xion-inter

./: .gitignore  Cargo.toml  Dockerfile  README.md  optimize.sh
contracts/juno-merger/: .gitignore  Cargo.toml
contracts/juno-merger/src/: contract.rs  helpers.rs  msg.rs  state.rs
contracts/xion-minter/: Cargo.toml
contracts/xion-minter/src/: contract.rs
juno-merger/: Cargo.toml
juno-merger/artifacts/: checksums.txt  juno_merger.wasm
juno-merger/src/: contract.rs  error.rs  msg.rs  state.rs
local-ic-config/: mnemonic2.txt
local-ic-config/chains/: juno_hub_custom.json
local-ic-config/configs/: logs.json
local-ic-config/hermes/: config.toml
local-ic-config/homedirs/.gaia/artifacts/: polytone_voice-aarch64.wasm
local-ic-config/homedirs/.gaia/config/: app.toml  client.toml  config.toml
local-ic-config/homedirs/.gaia/keyring-test/: acc1.info  acc2.info
local-ic-config/homedirs/.juno/artifacts/: interchain_counter.wasm  polytone_listener-aarch64.wasm  polytone_note-aarch64.wasm
local-ic-config/homedirs/.juno/config/: app.toml  client.toml  config.toml
local-ic-config/homedirs/.juno/keyring-test/: acc1.info  acc2.info
local-ic-config/homedirs/.xion/artifacts/: cw20_base.wasm  polytone_proxy-aarch64.wasm
local-ic-config/homedirs/.xion/config/: app.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json
local-ic-config/homedirs/.xion/keyring-test/: xion-0.info  xion-1.info
m-and-a/: Cargo.toml
xion-minter/: Cargo.toml
xion-minter/artifacts/: checksums.txt  xion_minter.wasm
xion-minter/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
